--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
         </ul>
         </nav>
     <div class="about-me">
-        <img class="profile-pic" src="blacklogos/newine.jpg"/>
+        <img class="profile-pic" src="img"/>
         <div>
         <h1>About Me</h1>
         <h3 class="para">I’m currently a first-year B.Tech student exploring the world of tech and design. Over the past few months, I’ve been learning the fundamentals of web development—starting with HTML and CSS, and now gradually moving into JavaScript and React.
