social links added

--- a/about.html
+++ b/about.html
@@ -12,7 +12,6 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
-    
             <li><a href="contact.html">contact</a></li>
         </ul>
         </nav>
@@ -22,7 +21,9 @@
         <h1>About Me</h1>
         <h3 class="para">I’m currently a first-year B.Tech student exploring the world of tech and design. Over the past few months, I’ve been learning the fundamentals of web development—starting with HTML and CSS, and now gradually moving into JavaScript and React.
              I enjoy creating projects that are both functional and visually appealing. What interests me most is how simple ideas can turn into impactful solutions when built thoughtfully. I may be at the beginning of my journey, but I’m genuinely excited about learning, building, and growing through every project I take on.</h3>
-        <button class="resume">Resume</button>
+        <a href="files/Resume-GANGA RAGHUWANSHI.pdf" download>
+                <button class="resume">Resume</button>
+        </a>
         </div>
         
     </div>
