--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </div>
     </div>
     <div class="social">
-        <a href="#"><i class='bx bxl-linkedin-square' ></i></a>
-        <a href="#"><i class='bx bxl-github' ></i></a>
+        <a href="https://www.linkedin.com/in/ganga-raghuwanshi-910a40323/" target="_blank"><i class='bx bxl-linkedin-square' ></i></a>
+        <a href="https://github.com/ganga-300"><i class='bx bxl-github' ></i></a>
         <a href="#"><i class='bx bxl-gmail' ></i></a>
         <a href="#"><i class='bx bxl-instagram-alt' ></i></a>
     </div>
