some changes made in css

--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
             hover effects, and a clean design recreate the familiar experience — with a personal twist.
           </p>
           <img src="blacklogos/Screenshot 2025-04-05 at 3.17.25 AM.png" alt="YouTube Clone">
-          <a href="https://your-project-link.com" class="btn">View Project →</a>
+          <a href="https://ganga-300.github.io/YOUTUBE-CLONE111/" class="btn">View Project →</a>
         </div>
     
         <div class="card">
